--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,11 +18,13 @@ html {
 }
 
 body {
-  background-color: gray;
+  background-color: #333;
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+
+  color: white;
 }
 
 nav {
@@ -38,4 +40,8 @@ main {
 
 h1 {
   font-size: 3.6rem;
+}
+
+p {
+  font-size: 2rem;
 }
