--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,18 +18,50 @@ html {
 }
 
 body {
-  background-color: #333;
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-
+  min-height: 100vh;
+  
+  
+  background-color: #333;
   color: white;
+  text-align: center;
+}
+
+
+
+.bookcard {
+  background: #ddd;
+  margin: 20px;
+  padding: 40px;
+  display: inline-block;
+  border-radius: 16px;
+  color: #333;
+
 }
 
 nav {
-  background-color: white;
+  background-color: #999;
   font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 20px 0;
+}
+
+nav a {
+  display: inline-block;
+  margin: 0;
+  padding: 20px;
+  color: orange;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  background: #aaa;
 }
 
 main {
@@ -44,4 +76,11 @@ h1 {
 
 p {
   font-size: 2rem;
+}
+
+#searchResults {
+  margin: 0 auto;
+  width: 70vw;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
