--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title><%= title %></title>
+    <title>PodReads: <%= title %></title>
   </head>
   <body>
     <nav>
-      <ul>
+        <a href="/books">My Books</a>
+        <a href="/books/search">Book Search</a>
         <% if (user) { %>
-        <li>
           <a href="/auth/logout">Log Out</a>
-        </li>
         <% } else { %>
-        <li>
           <a href="/auth/google">Login with Google</a>
-        </li>
         <% } %>
-      </ul>
     </nav>
