--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -40,8 +40,8 @@
       <% } %>
       <input type="text" name="googleId" hidden value="<%= book.id %>">
       
-      <input type="text" name="qTitle" hidden value=<%= qTitle %>>
-      <input type="text" name="qAuthor" hidden value=<%= qAuthor %>>
+      <input type="text" name="qTitle" hidden value="<%= qTitle %>">
+      <input type="text" name="qAuthor" hidden value="<%= qAuthor %>">
 
       <input type="submit" value="Add Book">
       </form>
