--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,8 @@
   </head>
   <body>
     <nav>
-        <a href="/books">My Books</a>
-        <a href="/books/search">Book Search</a>
+        <a href="/booklists">My Books</a>
+        <a href="/books/">Search for Books</a>
         <% if (user) { %>
           <a href="/auth/logout">Log Out</a>
         <% } else { %>
