--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,9 @@
   </head>
   <body>
     <nav>
+        <a href="/podcasts/search">Find Podcasts</a>
         <a href="/booklists">My Books</a>
-        <a href="/books/">Search for Books</a>
+        <a href="/books/">Find Books</a>
         <% if (user) { %>
           <a href="/auth/logout">Log Out</a>
         <% } else { %>
