--- a/views/booklists/index.ejs
+++ b/views/booklists/index.ejs
@@ -25,6 +25,9 @@
         <% if (book.published) { %>
           <p>Published: <%= book.published.getFullYear() %> </p>
         <% } %>
+        <% if (book.description) { %>
+          <p>Description: <%= book.description %> </p>
+        <% } %>
         <form action="/books/<%= book._id %>?_method=DELETE" method="post">
         <input type="text" name="booklistId" hidden value="<%= booklist._id %>">
         <input type="submit" value="Remove Book">
