--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -14,7 +14,9 @@
     <p><%= pubDate.toDateString() %></p>
 
     <p>Potential Authors
-      <% const regex = /[A-Z][a-z]*\s[A-Z][a-z]*/g %>
+      <!-- old reged /[A-Z][a-z]*\s[A-Z][a-z]*/g -->
+      [
+      <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
       <% const potentialAuthors = desc.match(regex) %>
       <% if (potentialAuthors) { %>
         <ul>
