--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -1,9 +1,18 @@
 <%- include('../partials/header') %>
 
-<% if (results) { %>
+<% if (podcast) { %>
 
-  <h1><%= results.title %> </h1>
-  <img src="<%= results.image %>" alt="<%= results.title %> ">
+  <h1><%= podcast.title %> </h1>
+  <p>
+    <% if (user.podcasts.includes(podcast.id)) { %>
+      <form action="/podcasts/<%= podcast.id %>?_method=DELETE" method="post">
+    <% } else { %>
+        <form action="/podcasts/<%= podcast.id %>" method="post">
+    <% } %>
+    <input type="submit" value="<%= user.podcasts.includes(podcast.id) ? 'Unfollow Podcast' : 'Follow Podcast' %>">
+    </form>
+  </p>
+  <img src="<%= podcast.image %>" alt="<%= podcast.title %> ">
 
   <% episodes.forEach(episode => { %>
   
@@ -15,7 +24,6 @@
 
     <p>Potential Authors
       <!-- old reged /[A-Z][a-z]*\s[A-Z][a-z]*/g -->
-      [
       <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
       <% const potentialAuthors = desc.match(regex) %>
       <% if (potentialAuthors) { %>
