--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav>
+        <a href="/podcasts">My Podcasts</a>
         <a href="/podcasts/search">Find Podcasts</a>
         <a href="/booklists">My Books</a>
         <a href="/books/">Find Books</a>
