--- a/views/podcasts/show.ejs
+++ b/views/podcasts/show.ejs
@@ -20,13 +20,22 @@
   <% episodes.forEach(episode => { %>
   
     <h2><%= episode.title %></h2>
-    <% const desc = episode.description.replace( /(<([^>]+)>)/ig, '') %>
+    
+    <% // episode.description.replace( /(<([^>]+)>)/ig, '') %>
+
+    <% let desc = episode.description.replace(/<script[^>]*>([\S\s]*?)<\/script>/gmi, '') %>
+    <% desc = desc.replace(/<\/?\w(?:[^"'>]|"[^"]*"|'[^']*')*>/gmi, '') %>
+   
+    
     <p><%= desc %></p>
     <% const pubDate = new Date(episode.pub_date_ms) %>
     <p><%= pubDate.toDateString() %></p>
 
     <p>Potential Authors
       <!-- old reged /[A-Z][a-z]*\s[A-Z][a-z]*/g -->
+
+
+
       <% const regex = /[A-Z][a-z]{2,}\s[A-Z][a-zA-Z'?]{2,}\s/g %>
       <% const potentialAuthors = desc.match(regex) %>
       <% if (potentialAuthors) { %>
