--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,9 +13,13 @@
         <i class="fas fa-headphones"></i>
         PodReads
       </a>
-      <a href="/podcasts">My Podcasts</a>
+      <a href="/podcasts">
+        <i class="fas fa-microphone-alt"></i>
+        My Podcasts</a>
       <a href="/podcasts/search">Find Podcasts</a>
-      <a href="/booklists">My Books</a>
+      <a href="/booklists">
+        <i class="fas fa-book"></i>
+        My Books</a>
       <a href="/books/">Find Books</a>
       <% if (user) { %>
         <a href="/auth/logout">Log Out</a>
