--- a/views/podcasts/search.ejs
+++ b/views/podcasts/search.ejs
@@ -4,7 +4,7 @@
   <form action="/podcasts/search" method="PUT">
       <div class='input-group'>
         <input type="text" name="q" value="<%= query %>">
-        <button type="submit">Search</button>
+        <button type="submit"><i class="fas fa-search"></i> Search</button>
     </form>
   </div>
 </div>
