--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,9 +45,23 @@ h1, h2, h3, .brand, nav a {
   font-family: 'Oswald';
 }
 
+button, option, select {
+  font-family: 'Montserrat'
+}
+
 label {
   font-size: 2rem;
   margin: 0 1rem;
+}
+
+a {
+  color: orange;
+  text-decoration: none;
+}
+
+a:hover {
+  color: orange;
+  text-decoration: underline;
 }
 
 p {
@@ -56,6 +70,39 @@ p {
 
 h1 {
   font-size: 3.5rem;
+}
+
+h1 > a {
+  color: white;
+  text-decoration: none;
+}
+
+h1 > a:hover {
+  text-decoration: underline;
+}
+
+h1 > form {
+  display: inline;
+  margin-left: 20px;
+}
+
+h1 > .edit {
+  display: inline;
+  font-size: 1.5rem;
+  color: orange;
+  font-family: 'Montserrat';
+}
+
+h1 button {
+  background: none;
+  color: orange;
+  border: 0;
+  font-weight: bold;
+  font-family: 'Montserrat';
+  cursor: pointer;
+}
+h1 button:hover {
+  text-decoration: underline;
 }
 
 nav {
@@ -70,13 +117,13 @@ nav {
 nav a.brand {
   font-size: 3rem;
   font-weight: 700;
-  padding: 1.5rem;
+  padding: 12px 20px;
 }
 
 nav a {
   display: inline-block;
   margin: 0;
-  padding: 25px 25px 20px 25px;
+  padding: 20px 20px 15px 20px;
   border-bottom: solid 5px #999;
   color: var(--link-orange);
   text-decoration: none;
@@ -87,7 +134,7 @@ nav a:last-of-type {
 }
 
 nav a:hover {
-  /* text-decoration: underline; */
+  text-decoration: none;
   background: #aaa;
   border-bottom: solid 5px var(--link-orange);
 }
@@ -177,12 +224,16 @@ nav a:hover {
 }
 
 .bookcard {
-  margin: 20px;
+  margin: 40px 0 0 40px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: row;
 }
 
 .bookcard form {
   display: flex;
   flex-direction: row;
+  width: 100%;
 }
 
 .bookcard-img {
@@ -201,7 +252,7 @@ nav a:hover {
   height: 100%;
 }
 .bookcard-info {
-  width: 400px;
+  width: 300px;
   height: 300px;
   background: #ccc;
   display: flex;
@@ -230,10 +281,34 @@ nav a:hover {
 }
 
 .bookcard-info input {
-  width: 100px;
+  width: auto;
   margin: 0 auto;
 }
 
 .bookcard-info span {
   color: orange;
+}
+
+.podcast-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  max-width: 400px;
+}
+
+.podcast-card img {
+  max-width: 260px;
+  max-height: 260px;
+}
+
+.podcast-title a{
+  font-size: 2.5rem;
+  color: white;
+  text-decoration: none;
+}
+
+.podcast-title a:hover{
+  text-decoration: underline;
 }
