--- a/views/booklists/show.ejs
+++ b/views/booklists/show.ejs
@@ -1,33 +1,54 @@
 <%- include('../partials/header') %>
 
-<h2><%= booklist.name %></h2>
-<p><a href="/booklists/<%= booklist._id %>/edit">Edit Name</a></p>
+<h1><%= booklist.name %>
+  <br>
+  <a href="/booklists/<%= booklist._id %>/edit" class="edit">Edit Booklist</a>
+  <form action="/booklists/<%= booklist._id %>?_method=DELETE" method=POST>
+    <button type="submit">Delete List</button>
+  </form>
+</h1>
 
 <% if (booklist.books.length === 0) { %>
   <p>This list is empty! <a href='/books'>Add books</a></p>
-<% } %>
+<% } else { %>
+
+<div class="card-container">
 <% booklist.books.forEach(book => { %>
   <div class="bookcard">
-    <% if (book.thumbnail) { %>
-    <img src="<%= book.thumbnail %>"" alt="<%= book.title %>">
-    <% } %>
-    <% if (book.title) { %>
-    <p><%= book.title %> </p>
-    <% } %>
-    <% if (book.author) { %>
-    <p>by <%= book.author %> </p>
-    <% } %>
-    <% if (book.published) { %>
-      <p>Published: <%= book.published.getFullYear() %> </p>
-    <% } %>
-    <% if (book.description) { %>
-      <p>Description: <%= book.description %> </p>
-    <% } %>
-    <form action="/books/<%= book._id %>?_method=DELETE" method="post">
-    <input type="text" name="booklistId" hidden value="<%= booklist._id %>">
-    <button type="submit">Remove Book</button>
-    </form>
+
+    <div class="bookcard-img">
+      <% if (book.thumbnail) { %>
+        <img src="<%= book.thumbnail %>">
+        <input type="text" hidden name="thumbnail" value="<%= book.thumbnail %>">
+      <% } else { %>
+        <img src="https://picsum.photos/200/300" alt="No cover image, using placeholder image">
+      <% } %>
+    </div>
+
+    <div class="bookcard-info">
+      <% if (book.title) { %>
+      <p><%= book.title %> </p>
+      <% } %>
+
+      <% if (book.author) { %>
+      <p>by <%= book.author %> </p>
+      <% } %>
+
+      <% if (book.published) { %>
+        <p><span>Published: </span><%= book.published.getFullYear() %> </p>
+      <% } %>
+      <% if (book.description) { %>
+        <p><span>Description: </span><%= book.description %> </p>
+      <% } %>
+      <form action="/books/<%= book._id %>?_method=DELETE" method="post">
+      <input type="text" name="booklistId" hidden value="<%= booklist._id %>">
+      <input type="submit" value="Remove Book">
+    
+      </form>
+    </div>
   </div>
 <% }) %>
+</div>
+<% } %>
 
 <%- include('../partials/footer') %>
